parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> programaX MAIN DELIMITADOR bloqueCodigo DELIMITADOR
Rule 2     programaX -> var programa
Rule 3     programaX -> funcion programa
Rule 4     programaX -> <empty>
Rule 5     bloqueCodigo -> bloqueCodigoX bloqueCodigoY
Rule 6     bloqueCodigoX -> estatuto
Rule 7     bloqueCodigoX -> var
Rule 8     bloqueCodigoY -> bloqueCodigo
Rule 9     bloqueCodigoY -> <empty>
Rule 10    estatuto -> escritura
Rule 11    estatuto -> input
Rule 12    estatuto -> if
Rule 13    estatuto -> asignacion
Rule 14    estatuto -> for
Rule 15    estatuto -> while
Rule 16    estatuto -> idFuncion
Rule 17    funcion -> tipo idFuncion DELIMITADOR bloqueCodigo DELIMITADOR
Rule 18    idFuncion -> IDENTIFICADOR DELIMITADOR idFuncionX
Rule 19    idFuncionX -> tipo IDENTIFICADOR idFuncionY DELIMITADOR
Rule 20    idFuncionX -> DELIMITADOR
Rule 21    idFuncionY -> SEPARADOR idFuncionX
Rule 22    var -> tipo varX
Rule 23    varX -> IDENTIFICADOR varY
Rule 24    varY -> DELIMITADOR exp DELIMITADOR varZ DELIMITADOR
Rule 25    varY -> varZ DELIMITADOR
Rule 26    varZ -> SEPARADOR varX
Rule 27    varZ -> <empty>
Rule 28    operacion -> expresion operacionX
Rule 29    operacionX -> OPERADOR_LOGICO operacion
Rule 30    operacionX -> <empty>
Rule 31    expresion -> exp expresionX
Rule 32    expresionX -> OPERADOR_LOGICO exp
Rule 33    expresionX -> <empty>
Rule 34    factor -> DELIMITADOR expresion DELIMITADOR
Rule 35    factor -> constante
Rule 36    factor -> OPERADOR constante
Rule 37    escritura -> PRINT DELIMITADOR operacion DELIMITADOR DELIMITADOR
Rule 38    asignacion -> IDENTIFICADOR asignacionX OPERADOR_ASIGNACION asignacionY DELIMITADOR
Rule 39    asignacionX -> DELIMITADOR exp DELIMITADOR
Rule 40    asignacionX -> <empty>
Rule 41    asignacionY -> idFuncion
Rule 42    asignacionY -> operacion
Rule 43    exp -> termino expX
Rule 44    expX -> OPERADOR exp
Rule 45    expX -> <empty>
Rule 46    termino -> factor terminoX
Rule 47    terminoX -> OPERADOR termino
Rule 48    terminoX -> <empty>
Rule 49    for -> FOR DELIMITADOR asignacion DELIMITADOR operacion DELIMITADOR forX DELIMITADOR DELIMITADOR bloqueCodigo DELIMITADOR
Rule 50    forX -> exp
Rule 51    forX -> asignacion
Rule 52    while -> WHILE DELIMITADOR operacion DELIMITADOR DELIMITADOR bloqueCodigo DELIMITADOR
Rule 53    if -> IF DELIMITADOR operacion DELIMITADOR DELIMITADOR bloqueCodigo DELIMITADOR ifX
Rule 54    ifX -> ELSE DELIMITADOR bloqueCodigo DELIMITADOR
Rule 55    ifX -> <empty>
Rule 56    input -> IDENTIFICADOR OPERADOR_ASIGNACION INPUT DELIMITADOR tipo DELIMITADOR
Rule 57    constante -> STRING
Rule 58    constante -> CHAR
Rule 59    constante -> INT
Rule 60    constante -> FLOAT
Rule 61    tipo -> TIPO_STRING
Rule 62    tipo -> TIPO_CHAR
Rule 63    tipo -> TIPO_INT
Rule 64    tipo -> TIPO_FLOAT

Terminals, with rules where they appear

CHAR                 : 58
DELIMITADOR          : 1 1 17 17 18 19 20 24 24 24 25 34 34 37 37 37 38 39 39 49 49 49 49 49 49 52 52 52 52 53 53 53 53 54 54 56 56
ELSE                 : 54
FLOAT                : 60
FOR                  : 49
IDENTIFICADOR        : 18 19 23 38 56
IF                   : 53
INPUT                : 56
INT                  : 59
MAIN                 : 1
OPERADOR             : 36 44 47
OPERADOR_ASIGNACION  : 38 56
OPERADOR_LOGICO      : 29 32
PRINT                : 37
SEPARADOR            : 21 26
STRING               : 57
TIPO_CHAR            : 62
TIPO_FLOAT           : 64
TIPO_INT             : 63
TIPO_STRING          : 61
WHILE                : 52
error                : 

Nonterminals, with rules where they appear

asignacion           : 13 49 51
asignacionX          : 38
asignacionY          : 38
bloqueCodigo         : 1 8 17 49 52 53 54
bloqueCodigoX        : 5
bloqueCodigoY        : 5
constante            : 35 36
escritura            : 10
estatuto             : 6
exp                  : 24 31 32 39 44 50
expX                 : 43
expresion            : 28 34
expresionX           : 31
factor               : 46
for                  : 14
forX                 : 49
funcion              : 3
idFuncion            : 16 17 41
idFuncionX           : 18 21
idFuncionY           : 19
if                   : 12
ifX                  : 53
input                : 11
operacion            : 29 37 42 49 52 53
operacionX           : 28
programa             : 2 3 0
programaX            : 1
termino              : 43 47
terminoX             : 46
tipo                 : 17 19 22 56
var                  : 2 7
varX                 : 22 26
varY                 : 23
varZ                 : 24 25
while                : 15

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . programaX MAIN DELIMITADOR bloqueCodigo DELIMITADOR
    (2) programaX -> . var programa
    (3) programaX -> . funcion programa
    (4) programaX -> .
    (22) var -> . tipo varX
    (17) funcion -> . tipo idFuncion DELIMITADOR bloqueCodigo DELIMITADOR
    (61) tipo -> . TIPO_STRING
    (62) tipo -> . TIPO_CHAR
    (63) tipo -> . TIPO_INT
    (64) tipo -> . TIPO_FLOAT

    MAIN            reduce using rule 4 (programaX -> .)
    TIPO_STRING     shift and go to state 7
    TIPO_CHAR       shift and go to state 4
    TIPO_INT        shift and go to state 1
    TIPO_FLOAT      shift and go to state 5

    programaX                      shift and go to state 3
    tipo                           shift and go to state 6
    programa                       shift and go to state 9
    var                            shift and go to state 8
    funcion                        shift and go to state 2

state 1

    (63) tipo -> TIPO_INT .

    DELIMITADOR     reduce using rule 63 (tipo -> TIPO_INT .)
    IDENTIFICADOR   reduce using rule 63 (tipo -> TIPO_INT .)


state 2

    (3) programaX -> funcion . programa
    (1) programa -> . programaX MAIN DELIMITADOR bloqueCodigo DELIMITADOR
    (2) programaX -> . var programa
    (3) programaX -> . funcion programa
    (4) programaX -> .
    (22) var -> . tipo varX
    (17) funcion -> . tipo idFuncion DELIMITADOR bloqueCodigo DELIMITADOR
    (61) tipo -> . TIPO_STRING
    (62) tipo -> . TIPO_CHAR
    (63) tipo -> . TIPO_INT
    (64) tipo -> . TIPO_FLOAT

    MAIN            reduce using rule 4 (programaX -> .)
    TIPO_STRING     shift and go to state 7
    TIPO_CHAR       shift and go to state 4
    TIPO_INT        shift and go to state 1
    TIPO_FLOAT      shift and go to state 5

    programaX                      shift and go to state 3
    tipo                           shift and go to state 6
    var                            shift and go to state 8
    funcion                        shift and go to state 2
    programa                       shift and go to state 10

state 3

    (1) programa -> programaX . MAIN DELIMITADOR bloqueCodigo DELIMITADOR

    MAIN            shift and go to state 11


state 4

    (62) tipo -> TIPO_CHAR .

    DELIMITADOR     reduce using rule 62 (tipo -> TIPO_CHAR .)
    IDENTIFICADOR   reduce using rule 62 (tipo -> TIPO_CHAR .)


state 5

    (64) tipo -> TIPO_FLOAT .

    DELIMITADOR     reduce using rule 64 (tipo -> TIPO_FLOAT .)
    IDENTIFICADOR   reduce using rule 64 (tipo -> TIPO_FLOAT .)


state 6

    (22) var -> tipo . varX
    (17) funcion -> tipo . idFuncion DELIMITADOR bloqueCodigo DELIMITADOR
    (23) varX -> . IDENTIFICADOR varY
    (18) idFuncion -> . IDENTIFICADOR DELIMITADOR idFuncionX

    IDENTIFICADOR   shift and go to state 12

    varX                           shift and go to state 13
    idFuncion                      shift and go to state 14

state 7

    (61) tipo -> TIPO_STRING .

    DELIMITADOR     reduce using rule 61 (tipo -> TIPO_STRING .)
    IDENTIFICADOR   reduce using rule 61 (tipo -> TIPO_STRING .)


state 8

    (2) programaX -> var . programa
    (1) programa -> . programaX MAIN DELIMITADOR bloqueCodigo DELIMITADOR
    (2) programaX -> . var programa
    (3) programaX -> . funcion programa
    (4) programaX -> .
    (22) var -> . tipo varX
    (17) funcion -> . tipo idFuncion DELIMITADOR bloqueCodigo DELIMITADOR
    (61) tipo -> . TIPO_STRING
    (62) tipo -> . TIPO_CHAR
    (63) tipo -> . TIPO_INT
    (64) tipo -> . TIPO_FLOAT

    MAIN            reduce using rule 4 (programaX -> .)
    TIPO_STRING     shift and go to state 7
    TIPO_CHAR       shift and go to state 4
    TIPO_INT        shift and go to state 1
    TIPO_FLOAT      shift and go to state 5

    programaX                      shift and go to state 3
    tipo                           shift and go to state 6
    programa                       shift and go to state 15
    var                            shift and go to state 8
    funcion                        shift and go to state 2

state 9

    (0) S' -> programa .



state 10

    (3) programaX -> funcion programa .

    MAIN            reduce using rule 3 (programaX -> funcion programa .)


state 11

    (1) programa -> programaX MAIN . DELIMITADOR bloqueCodigo DELIMITADOR

    DELIMITADOR     shift and go to state 16


state 12

    (23) varX -> IDENTIFICADOR . varY
    (18) idFuncion -> IDENTIFICADOR . DELIMITADOR idFuncionX
    (24) varY -> . DELIMITADOR exp DELIMITADOR varZ DELIMITADOR
    (25) varY -> . varZ DELIMITADOR
    (26) varZ -> . SEPARADOR varX
    (27) varZ -> .

  ! shift/reduce conflict for DELIMITADOR resolved as shift
    DELIMITADOR     shift and go to state 19
    SEPARADOR       shift and go to state 17

  ! DELIMITADOR     [ reduce using rule 27 (varZ -> .) ]

    varY                           shift and go to state 18
    varZ                           shift and go to state 20

state 13

    (22) var -> tipo varX .

    TIPO_STRING     reduce using rule 22 (var -> tipo varX .)
    TIPO_CHAR       reduce using rule 22 (var -> tipo varX .)
    TIPO_INT        reduce using rule 22 (var -> tipo varX .)
    TIPO_FLOAT      reduce using rule 22 (var -> tipo varX .)
    MAIN            reduce using rule 22 (var -> tipo varX .)
    PRINT           reduce using rule 22 (var -> tipo varX .)
    IDENTIFICADOR   reduce using rule 22 (var -> tipo varX .)
    IF              reduce using rule 22 (var -> tipo varX .)
    FOR             reduce using rule 22 (var -> tipo varX .)
    WHILE           reduce using rule 22 (var -> tipo varX .)
    DELIMITADOR     reduce using rule 22 (var -> tipo varX .)


state 14

    (17) funcion -> tipo idFuncion . DELIMITADOR bloqueCodigo DELIMITADOR

    DELIMITADOR     shift and go to state 21


state 15

    (2) programaX -> var programa .

    MAIN            reduce using rule 2 (programaX -> var programa .)


state 16

    (1) programa -> programaX MAIN DELIMITADOR . bloqueCodigo DELIMITADOR
    (5) bloqueCodigo -> . bloqueCodigoX bloqueCodigoY
    (6) bloqueCodigoX -> . estatuto
    (7) bloqueCodigoX -> . var
    (10) estatuto -> . escritura
    (11) estatuto -> . input
    (12) estatuto -> . if
    (13) estatuto -> . asignacion
    (14) estatuto -> . for
    (15) estatuto -> . while
    (16) estatuto -> . idFuncion
    (22) var -> . tipo varX
    (37) escritura -> . PRINT DELIMITADOR operacion DELIMITADOR DELIMITADOR
    (56) input -> . IDENTIFICADOR OPERADOR_ASIGNACION INPUT DELIMITADOR tipo DELIMITADOR
    (53) if -> . IF DELIMITADOR operacion DELIMITADOR DELIMITADOR bloqueCodigo DELIMITADOR ifX
    (38) asignacion -> . IDENTIFICADOR asignacionX OPERADOR_ASIGNACION asignacionY DELIMITADOR
    (49) for -> . FOR DELIMITADOR asignacion DELIMITADOR operacion DELIMITADOR forX DELIMITADOR DELIMITADOR bloqueCodigo DELIMITADOR
    (52) while -> . WHILE DELIMITADOR operacion DELIMITADOR DELIMITADOR bloqueCodigo DELIMITADOR
    (18) idFuncion -> . IDENTIFICADOR DELIMITADOR idFuncionX
    (61) tipo -> . TIPO_STRING
    (62) tipo -> . TIPO_CHAR
    (63) tipo -> . TIPO_INT
    (64) tipo -> . TIPO_FLOAT

    PRINT           shift and go to state 23
    IDENTIFICADOR   shift and go to state 31
    IF              shift and go to state 34
    FOR             shift and go to state 30
    WHILE           shift and go to state 22
    TIPO_STRING     shift and go to state 7
    TIPO_CHAR       shift and go to state 4
    TIPO_INT        shift and go to state 1
    TIPO_FLOAT      shift and go to state 5

    asignacion                     shift and go to state 35
    estatuto                       shift and go to state 27
    tipo                           shift and go to state 38
    for                            shift and go to state 26
    idFuncion                      shift and go to state 32
    while                          shift and go to state 36
    if                             shift and go to state 25
    bloqueCodigo                   shift and go to state 33
    var                            shift and go to state 28
    input                          shift and go to state 29
    escritura                      shift and go to state 37
    bloqueCodigoX                  shift and go to state 24

state 17

    (26) varZ -> SEPARADOR . varX
    (23) varX -> . IDENTIFICADOR varY

    IDENTIFICADOR   shift and go to state 39

    varX                           shift and go to state 40

state 18

    (23) varX -> IDENTIFICADOR varY .

    DELIMITADOR     reduce using rule 23 (varX -> IDENTIFICADOR varY .)
    TIPO_STRING     reduce using rule 23 (varX -> IDENTIFICADOR varY .)
    TIPO_CHAR       reduce using rule 23 (varX -> IDENTIFICADOR varY .)
    TIPO_INT        reduce using rule 23 (varX -> IDENTIFICADOR varY .)
    TIPO_FLOAT      reduce using rule 23 (varX -> IDENTIFICADOR varY .)
    MAIN            reduce using rule 23 (varX -> IDENTIFICADOR varY .)
    PRINT           reduce using rule 23 (varX -> IDENTIFICADOR varY .)
    IDENTIFICADOR   reduce using rule 23 (varX -> IDENTIFICADOR varY .)
    IF              reduce using rule 23 (varX -> IDENTIFICADOR varY .)
    FOR             reduce using rule 23 (varX -> IDENTIFICADOR varY .)
    WHILE           reduce using rule 23 (varX -> IDENTIFICADOR varY .)


state 19

    (18) idFuncion -> IDENTIFICADOR DELIMITADOR . idFuncionX
    (24) varY -> DELIMITADOR . exp DELIMITADOR varZ DELIMITADOR
    (19) idFuncionX -> . tipo IDENTIFICADOR idFuncionY DELIMITADOR
    (20) idFuncionX -> . DELIMITADOR
    (43) exp -> . termino expX
    (61) tipo -> . TIPO_STRING
    (62) tipo -> . TIPO_CHAR
    (63) tipo -> . TIPO_INT
    (64) tipo -> . TIPO_FLOAT
    (46) termino -> . factor terminoX
    (34) factor -> . DELIMITADOR expresion DELIMITADOR
    (35) factor -> . constante
    (36) factor -> . OPERADOR constante
    (57) constante -> . STRING
    (58) constante -> . CHAR
    (59) constante -> . INT
    (60) constante -> . FLOAT

    DELIMITADOR     shift and go to state 46
    TIPO_STRING     shift and go to state 7
    TIPO_CHAR       shift and go to state 4
    TIPO_INT        shift and go to state 1
    TIPO_FLOAT      shift and go to state 5
    OPERADOR        shift and go to state 45
    STRING          shift and go to state 48
    CHAR            shift and go to state 41
    INT             shift and go to state 51
    FLOAT           shift and go to state 50

    tipo                           shift and go to state 44
    constante                      shift and go to state 49
    termino                        shift and go to state 42
    exp                            shift and go to state 52
    factor                         shift and go to state 47
    idFuncionX                     shift and go to state 43

state 20

    (25) varY -> varZ . DELIMITADOR

    DELIMITADOR     shift and go to state 53


state 21

    (17) funcion -> tipo idFuncion DELIMITADOR . bloqueCodigo DELIMITADOR
    (5) bloqueCodigo -> . bloqueCodigoX bloqueCodigoY
    (6) bloqueCodigoX -> . estatuto
    (7) bloqueCodigoX -> . var
    (10) estatuto -> . escritura
    (11) estatuto -> . input
    (12) estatuto -> . if
    (13) estatuto -> . asignacion
    (14) estatuto -> . for
    (15) estatuto -> . while
    (16) estatuto -> . idFuncion
    (22) var -> . tipo varX
    (37) escritura -> . PRINT DELIMITADOR operacion DELIMITADOR DELIMITADOR
    (56) input -> . IDENTIFICADOR OPERADOR_ASIGNACION INPUT DELIMITADOR tipo DELIMITADOR
    (53) if -> . IF DELIMITADOR operacion DELIMITADOR DELIMITADOR bloqueCodigo DELIMITADOR ifX
    (38) asignacion -> . IDENTIFICADOR asignacionX OPERADOR_ASIGNACION asignacionY DELIMITADOR
    (49) for -> . FOR DELIMITADOR asignacion DELIMITADOR operacion DELIMITADOR forX DELIMITADOR DELIMITADOR bloqueCodigo DELIMITADOR
    (52) while -> . WHILE DELIMITADOR operacion DELIMITADOR DELIMITADOR bloqueCodigo DELIMITADOR
    (18) idFuncion -> . IDENTIFICADOR DELIMITADOR idFuncionX
    (61) tipo -> . TIPO_STRING
    (62) tipo -> . TIPO_CHAR
    (63) tipo -> . TIPO_INT
    (64) tipo -> . TIPO_FLOAT

    PRINT           shift and go to state 23
    IDENTIFICADOR   shift and go to state 31
    IF              shift and go to state 34
    FOR             shift and go to state 30
    WHILE           shift and go to state 22
    TIPO_STRING     shift and go to state 7
    TIPO_CHAR       shift and go to state 4
    TIPO_INT        shift and go to state 1
    TIPO_FLOAT      shift and go to state 5

    asignacion                     shift and go to state 35
    tipo                           shift and go to state 38
    estatuto                       shift and go to state 27
    for                            shift and go to state 26
    idFuncion                      shift and go to state 32
    while                          shift and go to state 36
    if                             shift and go to state 25
    bloqueCodigo                   shift and go to state 54
    var                            shift and go to state 28
    input                          shift and go to state 29
    escritura                      shift and go to state 37
    bloqueCodigoX                  shift and go to state 24

state 22

    (52) while -> WHILE . DELIMITADOR operacion DELIMITADOR DELIMITADOR bloqueCodigo DELIMITADOR

    DELIMITADOR     shift and go to state 55


state 23

    (37) escritura -> PRINT . DELIMITADOR operacion DELIMITADOR DELIMITADOR

    DELIMITADOR     shift and go to state 56


state 24

    (5) bloqueCodigo -> bloqueCodigoX . bloqueCodigoY
    (8) bloqueCodigoY -> . bloqueCodigo
    (9) bloqueCodigoY -> .
    (5) bloqueCodigo -> . bloqueCodigoX bloqueCodigoY
    (6) bloqueCodigoX -> . estatuto
    (7) bloqueCodigoX -> . var
    (10) estatuto -> . escritura
    (11) estatuto -> . input
    (12) estatuto -> . if
    (13) estatuto -> . asignacion
    (14) estatuto -> . for
    (15) estatuto -> . while
    (16) estatuto -> . idFuncion
    (22) var -> . tipo varX
    (37) escritura -> . PRINT DELIMITADOR operacion DELIMITADOR DELIMITADOR
    (56) input -> . IDENTIFICADOR OPERADOR_ASIGNACION INPUT DELIMITADOR tipo DELIMITADOR
    (53) if -> . IF DELIMITADOR operacion DELIMITADOR DELIMITADOR bloqueCodigo DELIMITADOR ifX
    (38) asignacion -> . IDENTIFICADOR asignacionX OPERADOR_ASIGNACION asignacionY DELIMITADOR
    (49) for -> . FOR DELIMITADOR asignacion DELIMITADOR operacion DELIMITADOR forX DELIMITADOR DELIMITADOR bloqueCodigo DELIMITADOR
    (52) while -> . WHILE DELIMITADOR operacion DELIMITADOR DELIMITADOR bloqueCodigo DELIMITADOR
    (18) idFuncion -> . IDENTIFICADOR DELIMITADOR idFuncionX
    (61) tipo -> . TIPO_STRING
    (62) tipo -> . TIPO_CHAR
    (63) tipo -> . TIPO_INT
    (64) tipo -> . TIPO_FLOAT

    DELIMITADOR     reduce using rule 9 (bloqueCodigoY -> .)
    PRINT           shift and go to state 23
    IDENTIFICADOR   shift and go to state 31
    IF              shift and go to state 34
    FOR             shift and go to state 30
    WHILE           shift and go to state 22
    TIPO_STRING     shift and go to state 7
    TIPO_CHAR       shift and go to state 4
    TIPO_INT        shift and go to state 1
    TIPO_FLOAT      shift and go to state 5

    for                            shift and go to state 26
    asignacion                     shift and go to state 35
    estatuto                       shift and go to state 27
    tipo                           shift and go to state 38
    idFuncion                      shift and go to state 32
    while                          shift and go to state 36
    if                             shift and go to state 25
    bloqueCodigo                   shift and go to state 58
    var                            shift and go to state 28
    input                          shift and go to state 29
    bloqueCodigoY                  shift and go to state 57
    bloqueCodigoX                  shift and go to state 24
    escritura                      shift and go to state 37

state 25

    (12) estatuto -> if .

    PRINT           reduce using rule 12 (estatuto -> if .)
    IDENTIFICADOR   reduce using rule 12 (estatuto -> if .)
    IF              reduce using rule 12 (estatuto -> if .)
    FOR             reduce using rule 12 (estatuto -> if .)
    WHILE           reduce using rule 12 (estatuto -> if .)
    TIPO_STRING     reduce using rule 12 (estatuto -> if .)
    TIPO_CHAR       reduce using rule 12 (estatuto -> if .)
    TIPO_INT        reduce using rule 12 (estatuto -> if .)
    TIPO_FLOAT      reduce using rule 12 (estatuto -> if .)
    DELIMITADOR     reduce using rule 12 (estatuto -> if .)


state 26

    (14) estatuto -> for .

    PRINT           reduce using rule 14 (estatuto -> for .)
    IDENTIFICADOR   reduce using rule 14 (estatuto -> for .)
    IF              reduce using rule 14 (estatuto -> for .)
    FOR             reduce using rule 14 (estatuto -> for .)
    WHILE           reduce using rule 14 (estatuto -> for .)
    TIPO_STRING     reduce using rule 14 (estatuto -> for .)
    TIPO_CHAR       reduce using rule 14 (estatuto -> for .)
    TIPO_INT        reduce using rule 14 (estatuto -> for .)
    TIPO_FLOAT      reduce using rule 14 (estatuto -> for .)
    DELIMITADOR     reduce using rule 14 (estatuto -> for .)


state 27

    (6) bloqueCodigoX -> estatuto .

    PRINT           reduce using rule 6 (bloqueCodigoX -> estatuto .)
    IDENTIFICADOR   reduce using rule 6 (bloqueCodigoX -> estatuto .)
    IF              reduce using rule 6 (bloqueCodigoX -> estatuto .)
    FOR             reduce using rule 6 (bloqueCodigoX -> estatuto .)
    WHILE           reduce using rule 6 (bloqueCodigoX -> estatuto .)
    TIPO_STRING     reduce using rule 6 (bloqueCodigoX -> estatuto .)
    TIPO_CHAR       reduce using rule 6 (bloqueCodigoX -> estatuto .)
    TIPO_INT        reduce using rule 6 (bloqueCodigoX -> estatuto .)
    TIPO_FLOAT      reduce using rule 6 (bloqueCodigoX -> estatuto .)
    DELIMITADOR     reduce using rule 6 (bloqueCodigoX -> estatuto .)


state 28

    (7) bloqueCodigoX -> var .

    PRINT           reduce using rule 7 (bloqueCodigoX -> var .)
    IDENTIFICADOR   reduce using rule 7 (bloqueCodigoX -> var .)
    IF              reduce using rule 7 (bloqueCodigoX -> var .)
    FOR             reduce using rule 7 (bloqueCodigoX -> var .)
    WHILE           reduce using rule 7 (bloqueCodigoX -> var .)
    TIPO_STRING     reduce using rule 7 (bloqueCodigoX -> var .)
    TIPO_CHAR       reduce using rule 7 (bloqueCodigoX -> var .)
    TIPO_INT        reduce using rule 7 (bloqueCodigoX -> var .)
    TIPO_FLOAT      reduce using rule 7 (bloqueCodigoX -> var .)
    DELIMITADOR     reduce using rule 7 (bloqueCodigoX -> var .)


state 29

    (11) estatuto -> input .

    PRINT           reduce using rule 11 (estatuto -> input .)
    IDENTIFICADOR   reduce using rule 11 (estatuto -> input .)
    IF              reduce using rule 11 (estatuto -> input .)
    FOR             reduce using rule 11 (estatuto -> input .)
    WHILE           reduce using rule 11 (estatuto -> input .)
    TIPO_STRING     reduce using rule 11 (estatuto -> input .)
    TIPO_CHAR       reduce using rule 11 (estatuto -> input .)
    TIPO_INT        reduce using rule 11 (estatuto -> input .)
    TIPO_FLOAT      reduce using rule 11 (estatuto -> input .)
    DELIMITADOR     reduce using rule 11 (estatuto -> input .)


state 30

    (49) for -> FOR . DELIMITADOR asignacion DELIMITADOR operacion DELIMITADOR forX DELIMITADOR DELIMITADOR bloqueCodigo DELIMITADOR

    DELIMITADOR     shift and go to state 59


state 31

    (56) input -> IDENTIFICADOR . OPERADOR_ASIGNACION INPUT DELIMITADOR tipo DELIMITADOR
    (38) asignacion -> IDENTIFICADOR . asignacionX OPERADOR_ASIGNACION asignacionY DELIMITADOR
    (18) idFuncion -> IDENTIFICADOR . DELIMITADOR idFuncionX
    (39) asignacionX -> . DELIMITADOR exp DELIMITADOR
    (40) asignacionX -> .

  ! shift/reduce conflict for OPERADOR_ASIGNACION resolved as shift
    OPERADOR_ASIGNACION shift and go to state 61
    DELIMITADOR     shift and go to state 60

  ! OPERADOR_ASIGNACION [ reduce using rule 40 (asignacionX -> .) ]

    asignacionX                    shift and go to state 62

state 32

    (16) estatuto -> idFuncion .

    PRINT           reduce using rule 16 (estatuto -> idFuncion .)
    IDENTIFICADOR   reduce using rule 16 (estatuto -> idFuncion .)
    IF              reduce using rule 16 (estatuto -> idFuncion .)
    FOR             reduce using rule 16 (estatuto -> idFuncion .)
    WHILE           reduce using rule 16 (estatuto -> idFuncion .)
    TIPO_STRING     reduce using rule 16 (estatuto -> idFuncion .)
    TIPO_CHAR       reduce using rule 16 (estatuto -> idFuncion .)
    TIPO_INT        reduce using rule 16 (estatuto -> idFuncion .)
    TIPO_FLOAT      reduce using rule 16 (estatuto -> idFuncion .)
    DELIMITADOR     reduce using rule 16 (estatuto -> idFuncion .)


state 33

    (1) programa -> programaX MAIN DELIMITADOR bloqueCodigo . DELIMITADOR

    DELIMITADOR     shift and go to state 63


state 34

    (53) if -> IF . DELIMITADOR operacion DELIMITADOR DELIMITADOR bloqueCodigo DELIMITADOR ifX

    DELIMITADOR     shift and go to state 64


state 35

    (13) estatuto -> asignacion .
